--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,32 @@
 * {
   margin: 0;
   padding: 0;
+  --primary-color: #6e2d7d;
 }
 
 body {
   width: 100%;
   min-height: 100vh;
+  background: #2a7b9b;
+  background: linear-gradient(
+    326deg,
+    rgba(42, 123, 155, 1) 0%,
+    rgba(87, 199, 133, 1) 50%,
+    rgba(237, 221, 83, 1) 100%
+  );
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-family: 'Roboto', sans-serif;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.error {
+  color: #d83c31;
+  fill: #d83c31;
 }
